<resources>
    <string name="app_name">BusTracker-ACG</string>

    <!-- Google App ID-->
    <string name="google_app_id">bustracker-acg</string>

    <!--  Images Descriptions -->
    <string name="desc_splash_icon">Splash Image</string>
    <string name="splash_secret_txt">Bus Tracker</string>

    <!-- Drawer-->
    <string name="navigation_drawer_header">DEREE - Bus Tracker</string>
    <string name="nav_where_is_the_bus">Where is the bus?</string>
    <string name="nav_routes_times">Routes &amp; Times</string>
    <string name="nav_alarm">Alarm</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_language">Select Language</string>
    <string name="nav_greek">greek</string>
    <string name="nav_english">english</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Minutes Picker Dialog Fragment-->
    <string name="ok_button">OK</string>
    <string name="minutes_question">How many\nminutes earlier?</string>

    <!-- Delete Alarm Dialog Fragment-->
    <string name="delete_alarm_question">Delete Alarm?</string>
    <string name="delete_button">DELETE</string>
    <string name="cancel_button">CANCEL</string>

</resources>
