<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="@dimen/extra_large_padding"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/delete_alarm_question"
        android:textSize="@dimen/medium_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/alarm_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:gravity="center_horizontal"
        android:text="09:00"
        android:textSize="@dimen/small_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/title_text_view"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:text="@string/cancel_button"
        android:layout_below="@+id/alarm_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded_button"
        />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/small_margin"
        android:text="@string/delete_button"
        android:layout_below="@+id/alarm_text_view"
        android:layout_toRightOf="@+id/cancel_button"
        android:layout_toEndOf="@+id/cancel_button"
        android:background="@drawable/rounded_negative_button_states"
        />



</RelativeLayout>